--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
             <input type="text" placeholder="Enter city name" spellcheck="false">
             <button><img src="images/search.png"></button>
         </div>
-
+        <div class="error" style="display: none;">
+            <p>Invalid city name! Please try again.</p>
+        </div>
         <div class="weather">
             <img src="images/rain.png" class="weather-icon">
             <h1 class="temp"></h1>
